# LLM-Research-Toolkit

./: README.md  pyproject.toml
TokenProber/: __init__.py  __main__.py  cli.py  config.py  core.py  default_config.yaml  render.py  utils.py
TruthfulnessEvaluator/: __init__.py  __main__.py  config.py  inference.py  judging.py  pipeline.py  reporting.py  visualize_result.html
TruthfulnessEvaluator/datasets/: __init__.py  base.py  haluevalqa.py  hotpotqa.py  simpleqa.py  truthfulqa.py
TruthfulnessEvaluator/models/: __init__.py  base.py  gpt2.py  transformers_runner.py  vllm_runner.py
TruthfulnessEvaluator/utils/: __init__.py  json_stream.py
configs/: TokenProber.yaml
envs/vllm/: check_setup.py  setup.md
